syntax = "proto2";

package snapshot;

import "cloud/tasks/persistence/config/config.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/dataplane/snapshot/config";

////////////////////////////////////////////////////////////////////////////////

message SnapshotConfig {
    required persistence.PersistenceConfig PersistenceConfig = 1;
    optional string StorageFolder = 2 [default = "snapshot"];
    optional string LegacyStorageFolder = 3 [default = "hardware/default/snapshot"];
    optional uint64 ChunkBlobsTableShardCount = 4 [default = 10000];
    optional uint64 ChunkMapTableShardCount = 5 [default = 1000];
    optional string ExternalBlobsMediaKind = 6 [default = "rotencrypted"];
    optional uint32 DeleteWorkerCount = 7 [default = 100];
    optional uint32 ShallowCopyWorkerCount = 8 [default = 100];
    optional uint32 ShallowCopyInflightLimit = 9 [default = 1000];
    optional string ChunkCompression = 10 [default = "lz4"];
    optional string S3Bucket = 11;
    optional string ChunkBlobsS3KeyPrefix = 12 [default = "snapshot/chunks"];
    map<string, uint32> ProbeCompressionPercentage = 13;  // by codec
    optional persistence.PersistenceConfig MigrationDestinationStorageConfig = 14;
}
